main/default/objects/Epic__c/fields/Epic_Code__c.field-meta.xml
<CustomField>
    <fullName>Epic_Code__c</fullName>
    <label>Epic Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>