main/default/objects/Epic__c/validationRules/Add_Epic_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Epic_Code</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Epic_Code__c)</errorConditionFormula>
    <errorDisplayField>Epic_Code__c</errorDisplayField>
    <errorMessage>Add a value</errorMessage>
</ValidationRule>