main/default/objects/Epic__c/listViews/Open_Epics.listView-meta.xml
<ListView>
    <fullName>Open_Epics</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Compass Change Navigator,Compass Project Management,AWS/Amazon Build</value>
    </filters>
    <label>Open Epics</label>
</ListView>